<resources>
    <string name="app_name">ZipTrip</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be more than 8 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings for creating an account -->
    <string name="create_account_label">Create an Account</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="check_password">Re-enter Password</string>
    <string name="passwords_not_match">Passwords do not match</string>
    <string name="email_invalid">Invalid email address</string>
    <string name="prompt_phone">Phone</string>

    <!-- Strings for dashboard -->
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="current_trips">Current Trips</string>
    <string name="attendees_label">Attendees</string>
    <string name="default_notification_channel_id">alarm_channel_id_01</string>

    <!-- Strings for creating a trip -->
    <string name="create_trip_label">Create a Trip</string>
    <string name="trip_name_label">Trip Name</string>
    <string name="destination_label">Destination</string>
    <string name="add_friends_label">Add Friends</string>
    <string name="set_date_label">Set Date</string>
    <string name="no_trips">No trips yet! Click the + button to add one!</string>
    <string name="create_trip">Create Trip</string>
    <string name="add_friend_edittext">Search for friend\'s username</string>
    <string name="username_label">Username</string>
    <string name="start_date_label">Start date</string>
    <string name="end_date_label">End date</string>

    <!--- Strings related to Edit Profile -->
    <string name="editProfileLabel">Edit Profile</string>
    <string name="nameLabel">Name:</string>
    <string name="emailLabel">Email Address:</string>
    <string name="phoneLabel">Phone Number:</string>
    <string name="passwordLabel">Password:</string>
    <string name="updateProfileBtn">Update</string>

    <!-- Strings related to Profile Page -->
    <string name="profileLabel">Your Profile</string>

    <!-- Strings related to Trip At A Glance Page -->
    <string name="detailsLabel">Details</string>
    <string name="setstopsLabel">Set/View Stops</string>
    <string name="currentFriendsLabel">Current Friends</string>
    <string name="addFriendLabel">Add Friend</string>
    <string name="shoppingListLabel">Shopping List</string>
    <string name="recent_items_label">Recent items:</string>
    <string name="set_reminder_label">Set Reminder</string>
    <string name="current_roles_label">Current Roles</string>
    <string name="edit_roles">Edit Roles</string>
    <string name="leader_label">Leader:</string>
    <string name="drivers_label">Drivers:</string>

    <!-- Strings for details page -->
    <string name="details_title">Trip Details</string>
    <string name="duration_label">Duration</string>

    <!-- Strings related to Shopping list page -->
    <string name="input_item_label">Item name</string>
    <string name="add_item_label">Add</string>
    <string name="price_label">Price</string>
    <string name="no_items_message">There are no items on the shopping list.</string>

    <!-- Strings related to reminder -->
    <string name="set_time_label">Set time</string>

    <!-- Strings related to edit roles -->
    <string name="change_leader_label">Change Leader</string>
    <string name="add_driver_label">Add Driver</string>
    <string name="remove_driver_label">Remove Driver</string>
    <string name="username_input_label">Enter username</string>

    <!-- Strings related to viewing stops -->
    <string name="view_stops_title">Stops</string>

</resources>
