<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".ShoppingListActivity">

    <TextView
        android:id="@+id/shoppingListTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shoppingListLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:id="@+id/totalBillTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#F44336" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/itemEditText"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/input_item_label"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/priceEditText"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/price_label"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/addItemBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add_item_label"
            android:textAllCaps="false" />
    </LinearLayout>

    <TextView
        android:id="@+id/noItemsTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/no_items_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="invisible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shoppingListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>