<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:background="#003D3D3D"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/tripNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:text="@string/trip_name_label" />

    <TextView
        android:id="@+id/destinationLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/destination_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/destinationTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        tools:context=".MapsActivity" />
    -->

    <TextView
        android:id="@+id/friendsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attendees_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/attendeesTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="#FFFFFF" />

</LinearLayout>